# prodige-core

./: .gitignore  L1448N_CD_li_cont_rob1-selfcal.fits  README.md  plot_continuum_with_outflows.py  pyproject.toml
.github/workflows/: ci.yaml  python-publish.yml
backup/: setup.cfg  setup.py  setup_test.py
docs/: conf.py  index.rst  installation.rst  usage.rst
example/: B5-IRS1_CD_lo_cont_rob1-selfcal-pbcor.fits  HH211_CD_N2Dp_K_TdV.fits  HH211_CD_N2Dp_K_Vlsr.fits  HH211_CD_N2Dp_K_sigma_v.fits  HH211_CD_li_cont_rob1-selfcal-pbcor.fits  plot_continuum_with_outflows.py
src/prodige_core/: __init__.py  config.py  data_display.py  data_handler.py  source_catalogue.py  sources.csv
src/prodige_core/test/: conftest.py  test_data_display.py  test_data_handler.py  test_source_catalogue.py
