[build-system]
requires = ["setuptools >= 64", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "prodige_core"
dependencies = [
  "importlib-resources;python_version<'3.9'",
  "astropy>=5.0",
  "matplotlib>=3.6",
  "radio-beam>=0.3",
  "spectral-cube>=0.5.0",
  "reproject",
  "reproject",
]

requires-python = ">=3.7"
authors = [
  { name = "Jaime E. Pineda", email = "jpineda@mpe.mpg.de" },
  { name = "Caroline Gieser" },
]
maintainers = [{ name = "Jaime E. Pineda", email = "jpineda@mpe.mpg.de" }]
description = "Package to be used in PRODIGE analysis or publications."
readme = "README.md"
license = { text = "MIT License" }

license = {text = "MIT License"}
dynamic = ["version"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://noema-prodige.github.io/"
Documentation = "https://prodige-core.readthedocs.io/"
Repository = "https://github.com/NOEMA-PRODIGE/prodige-core"

[tool.setuptools_scm]
version_file = "src/prodige_core/_version.py"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.coverage.run]
branch = true
source = ["prodige_core"]

[tool.pytest.ini_options]
pythonpath = "src/"
addopts = [
    "--import-mode=importlib"#,
    ]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if __name__ == .__main__.:",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"
