[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build-system]
requires = ["setuptools >= 64", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
package_name = PRODIGE-core
description = package to be used in PRODIGE analysis or publications.
long_description = This is a package for helping generate a common style figures for PRODIGE data. It relies on astropy.
author = Jaime Pineda, Caroline Gieser, and team members.
author_email = jpineda@mpe.mpg.de
license = MIT
url = https://github.com/NOEMA-PRODIGE/prodige-core
edit_on_github = True
github_project = NOEMA-PRODIGE/prodige-core
